--- a/slide.css
+++ b/slide.css
@@ -1,7 +1,7 @@
-/*media query para adaptacao de dispositivos mobile*/
+/*inserir a media query para adaptacao de dispositivos mobile*/
 @media (max-width: 768px) {
-    html,
-    body {
+    html,body { /*para que todos os elementos da pagina fiquem fixados ao minimizar a tela*/
+
       position: fixed;
       top: 0;
       left: 0;
@@ -9,14 +9,6 @@
       height: 100%;
     
     }
-}
-html,
-body {  /*para que todos os elementos da pagina fiquem fixados ao minimizar a tela*/
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
 }
 header {
     display: block;
